--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -12,20 +12,20 @@ dock_floating={}
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=289
-dock_hsplit_3=-415
+dock_hsplit_2=356
+dock_hsplit_3=-399
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=2
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://overlay_main.tscn")
+dock_filesystem_selected_paths=PackedStringArray("res://mario/star_save_data.gd")
 dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://mario/")
 dock_bottom=[]
 dock_closed=[]
 dock_filesystem_h_split_offset=240
 dock_filesystem_v_split_offset=0
-dock_node_current_tab=0
+dock_node_current_tab=1
 dock_history_include_scene=true
 dock_history_include_global=true
 dock_3="Scene,Import"
@@ -43,8 +43,8 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://mario/coin.gd", "res://mario/PlayerInput.gd", "res://mario/save_file.gd", "res://scene_base.gd", "res://mario/settings_menu.gd", "res://addons/libsm64-godot/mario/sm64_mario.gd", "res://so_global.gd"]
-selected_script="res://addons/libsm64-godot/mario/sm64_mario.gd"
+open_scripts=["res://mario/coin.gd", "res://mario/mario_pause_menu.gd", "res://mario/PlayerInput.gd", "res://mario/save_block.gd", "res://mario/save_file.gd", "res://scene_base.gd", "res://mario/settings_menu.gd", "res://addons/libsm64-godot/mario/sm64_mario.gd", "res://so_global.gd", "res://mario/star_save_data.gd"]
+selected_script="res://mario/save_file.gd"
 open_help=["@GlobalScope", "bool", "FileAccess", "Input", "InputEvent", "InputEventJoypadButton", "InputEventJoypadMotion", "InputEventKey", "InputMap"]
 script_split_offset=272
 list_split_offset=0
